--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>curtiskline.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,12 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Curtis Kline</h1>
+					<p>An entrepreneur with a focus on modern technology.</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
@@ -34,7 +34,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I'm a tech-focused, entreprenurial thinker. I grew up in Oklahoma and went to college in California. I've lived in Santa Barbara, San Francisco, Oakland, South Lake Tahoe, New York City and (mostly) Tulsa.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -52,19 +52,19 @@
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<h3>Photography</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<span class="icon solid major fa-caravan"></span>
+								<h3>Camping</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<span class="icon solid major fa-fire"></span>
+								<h3>Burning Man</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<span class="icon solid major fa-campground"></span>
+								<h3>Camping</h3>
 							</li>
 						</ul>
 					</div>
@@ -428,14 +428,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://linkedin.com/in/curtiskline" class="icon brands alt fa-linkedin" target=new><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://twitter.com/curtiskline" class="icon brands alt fa-twitter" target=new><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/curtiskline/" class="icon brands alt fa-instagram" target=new><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:curtiskline@gmail.com" class="icon solid alt fa-envelope" target=new><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; 2022 Curtis Kline</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</section>
