--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Curtis Kline</h1>
-					<p>An entrepreneur with a focus on modern technology.</p>
+					<p>Technology, entrepreneurship, and business.</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -48,7 +48,7 @@
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>I spend much of my time in front of a computer, both at work and for fun. I also have other interests, including Burning Man, photography, camping, and climate change.</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
@@ -63,8 +63,8 @@
 								<h3>Burning Man</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-campground"></span>
-								<h3>Camping</h3>
+								<span class="icon solid major fa-smog"></span>
+								<h3>Climate</h3>
 							</li>
 						</ul>
 					</div>
@@ -78,9 +78,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>Privilege and Equity</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I believe in human rights, and I understand the privilege I enjoy in this world that has sheltered me from infringement on my rights. I support people who lack that privilege, including people of color, LGBTQ folks, and people who didn't grow up with financial advantages. I believe we, as a society, need to do a lot more to create environments where these people can be included, have more chances to succeed, and can feel welcome.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
@@ -413,7 +413,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<form method="post" action="#">
+					<form method="post" action="https://formspree.io/f/xwkywnqg">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
