--- a/index.html
+++ b/index.html
@@ -428,11 +428,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<footer>
 					<ul class="icons">
 						<li><a href="https://linkedin.com/in/curtiskline" class="icon brands alt fa-linkedin" target=new><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://twitter.com/curtiskline" class="icon brands alt fa-twitter" target=new><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.instagram.com/curtiskline/" class="icon brands alt fa-instagram" target=new><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 2022 Curtis Kline</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2022 Curtis Kline</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Fediverse<a rel="me" href="https://fstop.social/@curt">Mastodon</a></li>
 					</ul>
 				</footer>
 			</section>
