--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.instagram.com/curtiskline/" class="icon brands alt fa-instagram" target=new><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 2022 Curtis Kline</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Fediverse<a rel="me" href="https://fstop.social/@curt">Mastodon</a></li>
+						<li>&copy; 2022 Curtis Kline</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</section>
